<resources>
    <string name="app_name" translatable="false">Spotify Listener</string>
	<string name="app_description">Spotify Listener tells you what song, 
		from what album and by what artist you are currently playing on Spotify
        without looking at your device screen! 
		You can customize the order and what the app will say to fit your own preferences.
    </string>
    <string name="settings_title">Settings</string>
    <string name="checkbox_track_name">Track</string>
    <string name="checkbox_album_name">Album</string>
    <string name="checkbox_artist_name">Artist</string>
    <string name="test_button">Test it out!</string>
    <string name="edit_text_track_hint">Track</string>
    <string name="edit_text_album_hint">Album</string>
    <string name="edit_text_artist_hint">Artist</string>
    <string name="content_description_drag_track">Drag track</string>
    <string name="content_description_drag_album">Drag album</string>
    <string name="content_description_drag_artist">Drag artist</string>
    <string name="disabled_message">Spotify Listener is not working at the moment :(</string>
    <string name="tts_error_language">Error! Language not available.</string>
</resources>
