<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.andrea.spotifylistener.MainActivity">
    
    <RelativeLayout
        android:id="@+id/layoutMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        
        <TextView
            android:id="@+id/textViewDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="@dimen/md_padding"
            android:text="@string/app_description"/>
        
        <Switch
            android:id="@+id/switchActive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewDescription"
            android:layout_marginBottom="@dimen/md_padding"
            android:checked="true"/>
        
        <TextView
            android:id="@+id/textViewSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/switchActive"
            android:layout_marginBottom="@dimen/xs_padding"
            android:text="@string/settings_title"/>
        
        <!-- Main Settings Layout -->
        <LinearLayout
            android:id="@+id/layoutSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textViewSettings"
            android:orientation="horizontal">
            
            <!-- Layout Track -->
            <LinearLayout
                android:id="@+id/layoutTrack"
                style="@style/ThreeLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                
                <CheckBox
                    android:id="@+id/checkBoxTrackName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/checkbox_track_name"/>
                
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/editTextTrack"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/edit_text_track_hint"
                        android:inputType="text"/>
                </android.support.design.widget.TextInputLayout>
                
                <ImageView
                    android:id="@+id/imageViewDragTrack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/content_description_drag_track"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_drag_handle"/>
            </LinearLayout>
            
            <!-- Layout Album -->
            <LinearLayout
                android:id="@+id/layoutAlbum"
                style="@style/ThreeLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                
                <CheckBox
                    android:id="@+id/checkBoxAlbumName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/checkbox_album_name"/>
                
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/editTextAlbum"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/edit_text_album_hint"
                        android:inputType="text"/>
                </android.support.design.widget.TextInputLayout>
                
                <ImageView
                    android:id="@+id/imageViewDragAlbum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/content_description_drag_album"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_drag_handle"/>
            </LinearLayout>
            
            <!-- Layout Artist -->
            <LinearLayout
                android:id="@+id/layoutArtist"
                style="@style/ThreeLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                
                <CheckBox
                    android:id="@+id/checkBoxArtistName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/checkbox_artist_name"/>
                
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/editTextArtist"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/edit_text_artist_hint"
                        android:inputType="text"/>
                </android.support.design.widget.TextInputLayout>
                
                <ImageView
                    android:id="@+id/imageViewDragArtist"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/content_description_drag_artist"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_drag_handle"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/layoutBottom"
        android:layout_below="@+id/layoutMain"
        android:gravity="center_vertical|end"
        android:orientation="vertical">
        
        <TextView
            android:id="@+id/textViewDisabled"
            style="@style/TextViewError"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:visibility="visible"
            android:text="@string/disabled_message"/>
        
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/layoutBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">
        
        <Button
            android:id="@+id/buttonTest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:onClick="buttonTestClick"
            android:text="@string/test_button"
            style="@style/Button"/>
    </LinearLayout>

</RelativeLayout>
